--- a/display-exercise.html
+++ b/display-exercise.html
@@ -16,7 +16,17 @@
   <link rel="stylesheet" type="text/css" href="styles/display-page.css">
 </head>
 <body>
-<!-- your HTML here to implement the colored box design -->
-	<p>Placeholder!</p>
+  <main>
+    <div class = "container">
+      <div class='centered'>
+        <div class =" container top-one"></div>div>
+    
+        <div class = "container top-two"></div>
+        <div class = "container bottom-one"></div>
+        <div class = "container bottom-two"></div>
+        <div class = "container bottom-three"></div>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
